<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/screen2Fargment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/permission" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:background="@drawable/rounded_corner"
              android:layout_margin="15dp"

              >

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textSize="18.dp"
                  android:textStyle="bold"
                  android:layout_marginTop="13dp"
                  android:text="@string/location_permission" />

              <ImageView
                  android:layout_width="30dp"
                  android:id="@+id/locationPermission"
                  android:layout_height="wrap_content"
                  android:src="@drawable/closed"
                  android:layout_marginLeft="140dp"
                 />

          </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_margin="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18.dp"
            android:text="@string/run_bg"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/closed"
            android:layout_marginLeft="80dp"

            />
    </LinearLayout>
</LinearLayout>