<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="My Toolbar"
        >

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background=""
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tu__1_"
                    android:layout_margin="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Subscription"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Unlock more features and enjoy \nVIP benefits "
                        android:textSize="13sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="Upgrade"
                    android:layout_margin="26dp"
                    android:layout_marginStart="40dp"
                    android:padding=""
                    android:background="@drawable/yellow_rounded_corner"
                    />
            </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <ImageView
             android:layout_width="18dp"
             android:layout_height="wrap_content"
             android:src="@drawable/permissions"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/permission"
             android:textSize="18sp"
             android:textStyle="bold"/>

          <ImageView
              android:layout_width="18dp"
              android:layout_height="wrap_content"
              android:src="@drawable/baseline_navigate_next_24"
              android:layout_marginLeft="250dp"
              android:layout_marginTop="26dp"
              />


     </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:src="@drawable/report"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data_report"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_navigate_next_24"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="26dp"
                />

        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:src="@drawable/historical_route"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/historical_rute"
                android:textStyle="bold"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_navigate_next_24"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="26dp"
                />

        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:src="@drawable/route_preferences"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/route_preference"
                android:textStyle="bold"
                android:textSize="18sp" />


        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_to_stop"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1min"
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_dir"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Either side van "
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/return_to_start"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="yes"
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/navigation"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/navigation_pref"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/darker_gray"
                    android:text="Tolls , highways and ferries \n Avoid toll booths , highways and \n ferries by default"
                    android:textSize="14.sp"
                    android:paddingLeft="20.dp" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/general_preferences"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/general_pref"
                    android:textStyle="bold"
                    android:textSize="18sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_unit"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kilometers"
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_type"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Car"
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20.dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type"
                    android:textSize="14.sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Street"
                    android:textSize="14.sp"
                    android:textColor="@color/blue"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/privacy_policy"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_navigate_next_24"
                    android:layout_marginLeft="218dp"
                    android:layout_marginTop="26dp"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share__1_"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/share_us"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_navigate_next_24"
                    android:layout_marginLeft="260dp"
                    android:layout_marginTop="26dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rate"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rate_us"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:layout_marginTop="26dp"
                    android:src="@drawable/baseline_navigate_next_24" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>